tests/negative/gold/missing_colon_test.gold
tests/negative/missing_colon_test.toit:6:3: error: Missing colon for 'if' condition
  if 12 < 43
  ^~
tests/negative/missing_colon_test.toit:9:15: error: Missing semicolon
  for i := 0; i < 10: i++:
              ^
tests/negative/missing_colon_test.toit:12:6: error: Missing colon after 'try'
  try
     ^
tests/negative/missing_colon_test.toit:19:10: error: Missing colon after finally
  finally
         ^
tests/negative/missing_colon_test.toit:24:7: error: Missing colon for 'else'
  else
      ^
tests/negative/missing_colon_test.toit:27:3: error: Missing colon for loop condition
  while 1 == 2
  ^~~~~
tests/negative/missing_colon_test.toit:32:4: error: Missing colon to end class signature
  x/int
   ^
tests/negative/missing_colon_test.toit:32:4: error: Invalid name for declaration
  x/int
   ^
tests/negative/missing_colon_test.toit:36:5: error: Signatures and bodies must be separated by a `:`
    return x + y
    ^~~~~~
tests/negative/missing_colon_test.toit:32:3: error: Unresolved super class
  x/int
  ^
tests/negative/missing_colon_test.toit:32:4: error: Missing body
  x/int
   ^
tests/negative/missing_colon_test.toit:6:9: error: Can't call result of evaluating expression
  if 12 < 43
        ^
tests/negative/missing_colon_test.toit:9:24: error: Can't call result of evaluating expression
  for i := 0; i < 10: i++:
                       ^~
tests/negative/missing_colon_test.toit:9:17: error: Can't call result of evaluating expression
  for i := 0; i < 10: i++:
                ^
tests/negative/missing_colon_test.toit:27:11: error: Can't call result of evaluating expression
  while 1 == 2
          ^~
tests/negative/missing_colon_test.toit:36:12: error: Unresolved identifier: 'x'
    return x + y
           ^
tests/negative/missing_colon_test.toit:33:3: error: Field 'y' must be initialized in a constructor
  y/int
  ^
Compilation failed.
